# alt-blog-public

./: .gitignore  env-example  pyproject.toml
atl/: asgi.py  settings.py  urls.py  wsgi.py
music/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
music/static/music/css/: styles.css
music/templates/music/: about.html  add_post.html  home_page.html  list_albums.html  post.html
music/templates/music/includes/: nav.html
music/templatetags/: music_tags.py
music/utils/: menu.py  mixins.py
static/css/admin/: admin.css
templates/: base.html
users/: auth.py  context_processors.py  forms.py  urls.py  views.py
users/templates/users/: login.html  password_change_done.html  password_change_form.html  profile.html  register.html  register_done.html
