[tool.poetry]
name = "atl-blog"
version = "0.1.0"
description = ""
authors = ["Artem Kashitsyn <kashitsyn.a.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
django-debug-toolbar = "^4.4.6"
python-slugify = "^8.0.4"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
